--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,9 @@ _UpgradeReport_Files/
 Thumbs.db
 Desktop.ini
 .DS_Store
+Library/ArtifactDB
+Library/ArtifactDB-lock
+Library/p4plugin.log
+Library/SourceAssetDB
+Library/SourceAssetDB-lock
+Logs/shadercompiler-UnityShaderCompiler.exe0.log
