--- a/.p4ignore
+++ b/.p4ignore
@@ -60,3 +60,11 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+
+
+#------------------------
+# User Custom Ignore
+#------------------------
+
+#PlayFabSO File
+PlayFabEditorPrefsSO.asset
